[公司形象網站] 刻板 => 文自動化淡入

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -53,9 +53,9 @@
             <div class="slogan-big-move">教育旅行咖啡花店</div>
             <div class="move-from-right-padding"></div>
         </div>
-        <div class="center-title">
-            <h1>AI Excellence</h1>
-            <p class="slogan-little">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
+        <div class="center-title left-black animate">
+            <h1 class="left-black animate">AI Excellence</h1>
+            <p class="slogan-little left-black animate">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
         </div>
         <div class="move-from-left">
             <div class="move-from-left-padding"></div>
@@ -103,9 +103,9 @@
                     <input type="radio" id="control-3" name="control">
                     <input type="radio" id="control-4" name="control">
 
-                    <li class="slide">
-                        <h3>01 需求溝通</h3>
-                        <p>
+                    <li class="slide left animate">
+                        <h3 class="left animate">01 需求溝通</h3>
+                        <p class="left animate">
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
                             <br>
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
@@ -167,9 +167,9 @@
     <section class="service-list" id="service-list">
         <div class="left-block">            
             <img src="./images/background/bg-left-big-block.png" class="left-img">
-            <div class="item">
-                <h3>專業專案管理顧問服務</h3>
-                <p>
+            <div class="item left animate">
+                <h3 class="left animate">專業專案管理顧問服務</h3>
+                <p class="left animate">
                     專業專案管理顧問服務，經驗豐富的專案管理專家為您提供網站顧問諮詢，
                     <br>
                     協助您從計畫規劃、視覺設計、系統導入、網站上線、
@@ -177,25 +177,25 @@
                     教育訓練，到後續品質控制與維護，全程陪伴您度過網站建置的各個階段。
                 </p>
             </div>
-            <div class="item">
-                <h3>響應式網頁設計</h3>
-                <p>
+            <div class="item left animate">
+                <h3 class="left animate">響應式網頁設計</h3>
+                <p class="left animate">
                     我們使用全站響應式網頁設計，讓您的客戶能夠在任何設備上輕鬆瀏覽您的網站，
                     <br>
                     同時您也可以輕鬆在後台編輯響應式內容。
                 </p>
             </div>
-            <div class="item">
-                <h3>搜尋引擎優化技術</h3>
-                <p>
+            <div class="item left animate">
+                <h3 class="left animate">搜尋引擎優化技術</h3>
+                <p class="left animate">
                     透過與頂尖的搜尋引擎優化顧問公司的長期合作，我們了解網路搜尋技術，
                     <br>
                     並採用Google友善的網頁架構，提供完善的搜尋引擎優化管理工具和技術支援。
                 </p>
             </div>
-            <div class="item">
-                <h3>長期網站維護</h3>
-                <p>
+            <div class="item left animate">
+                <h3 class="left animate">長期網站維護</h3>
+                <p class="left animate">
                     我們提供網站操作指導和技術諮詢，透過易於理解的操作手冊和專業服務，
                     <br>
                     讓您輕鬆上手後台管理，無後顧之憂地維運您的網頁。
@@ -204,7 +204,7 @@
         </div>
         <div class="right-block">
             <h2 class="text-color-transition" data-text="服務項目">服務項目</h2>
-            <img src="./images/logo/logo-blue-right-top.png">
+            <img class="right-logo" src="./images/logo/logo-blue-right-top.png">
         </div>
     </section>
     <!-- 服務項目 end -->
