[公司形象網站] 動畫效果 => [報價流程] 輪播圖

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -83,16 +83,16 @@
                 
                 <div class="tab-list">
                     <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label class="fas fa-search" style="color:#F1B41B" for="control-1"></label>
+                        <label id="control1" class="fas fa-search" for="control-1" style="color:#F1B41B"></label>
                     </div>
                     <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label class="fas fa-bars" for="control-2"></label>
+                        <label id="control2" class="fas fa-bars" for="control-2"></label>
                     </div>
                     <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label class="fas fa-shopping-cart" for="control-3"></label>
+                        <label id="control3" class="fas fa-shopping-cart" for="control-3"></label>
                     </div>
                     <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label class="fas fa-eye" for="control-4"></label>
+                        <label id="control4" class="fas fa-eye" for="control-4"></label>
                     </div>
 
                 </div>
