--- a/web-layout/background-color-transition/gsap-3-part/index.html
+++ b/web-layout/background-color-transition/gsap-3-part/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DesignCourse</title>
     <link rel="stylesheet" href="./style.css">
-    <link 
-        rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js">
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script> -->
 
         <!-- 
             https://www.youtube.com/watch?v=VeTwNnZUPlw
+
+            https://codepen.io/designcourse/pen/vYQQKBW
+            
          -->
 </head>
 <body>
@@ -35,6 +36,11 @@
     <section></section>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js"></script>
     <script src="./script.js"></script>
+
 </body>
 </html>
