--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -69,9 +69,7 @@
     <section class="price-work-flow" id="price-work-flow">
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
-        <div class="text-color-transition-container">
-            <h2 class="text-color-transition" data-text="報價流程">報價流程</h2>
-        </div>
+        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">報價流程</h2>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
             <br>
@@ -203,7 +201,7 @@
             </div>
         </div>
         <div class="right-block">
-            <h2 class="text-color-transition" data-text="服務項目">服務項目</h2>
+            <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">服務項目</h2>
             <img class="right-logo" src="./images/logo/logo-blue-right-top.png">
         </div>
     </section>
@@ -212,7 +210,7 @@
 
     <!-- 作品集 start -->
     <section class="portfolio-block" id="portfolio-block">
-        <h2 class="text-color-transition" data-text="作品集">作品集</h2>
+        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
         </p>
@@ -270,6 +268,13 @@
 
 
 
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js"></script>
     <script src="./script.js"></script>
 
 </body>
