[公司形象網站] 動畫效果 => [報價流程] 輪播圖 => 拖曳效果優化

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -101,7 +101,7 @@
                     <input type="radio" id="control-3" name="control">
                     <input type="radio" id="control-4" name="control">
 
-                    <li class="slide left animate">
+                    <li class="slide left animate" id="slide1">
                         <h3 class="left animate">01 需求溝通</h3>
                         <p class="left animate">
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
