公司形象網站] 動畫效果 => [報價流程] 輪播圖 => 拖曳效果優化 => bug

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -92,7 +92,6 @@
                     <div class="text-bounce-button-blue-container text-bounce-button-blue">
                         <label id="control4" class="fas fa-eye" for="control-4"></label>
                     </div>
-
                 </div>
                 
                 <ul class="slides">
@@ -112,7 +111,7 @@
                             <br>
                         </p>
                     </li>
-                    <li class="slide">
+                    <li class="slide" id="slide2">
                         <h3>02 需求溝通</h3>
                         <p>
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
@@ -123,7 +122,7 @@
                             <br>
                         </p>
                     </li>
-                    <li class="slide">
+                    <li class="slide" id="slide3">
                         <h3>03 需求溝通</h3>
                         <p>
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
@@ -134,7 +133,7 @@
                             <br>
                         </p>
                     </li>
-                    <li class="slide">
+                    <li class="slide" id="slide4">
                         <h3>04 需求溝通</h3>
                         <p>
                             需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
