[公司形象網站] 動畫效果 => 作品集 輪播圖 => 範例優化

--- a/AI-ShenLun/04-作品集/carousel-slide/index.html
+++ b/AI-ShenLun/04-作品集/carousel-slide/index.html
@@ -13,7 +13,7 @@
 
     <section class="portfolio-block" id="portfolio-block">      
         <div class="computer-background-img">
-            <ul class="slide-list">
+            <ul class="portfolio-slide-list">
                 <input type="radio" id="portfolio1" name="control" checked>
                 <input type="radio" id="portfolio2" name="control">
                 <input type="radio" id="portfolio3" name="control">
@@ -26,34 +26,68 @@
                 <input type="radio" id="portfolio10" name="control">
                 <input type="radio" id="portfolio11" name="control">
                 <input type="radio" id="portfolio12" name="control">
-    
-                <li class="slide">1</li>
-                <li class="slide">2</li>
-                <li class="slide">3</li>
-                <li class="slide">4</li>
-                <li class="slide">5</li>
-                <li class="slide">6</li>
-                <li class="slide">7</li>
-                <li class="slide">8</li>
-                <li class="slide">9</li>
+                
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/TravelWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide1.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/CoffeeWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide2.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/PersonalPortfolio/home.html">
+                        <img src="./images/portfolio-slide/portfolio-slide3.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/FoodWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide4.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/WeddingWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide5.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/FoodWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide6.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/AppLandingWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide7.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/EdufordWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide8.png">
+                    </a>                    
+                </li>
+                <li class="slide">
+                    9
+                </li>
                 <li class="slide">10</li>
                 <li class="slide">11</li>
                 <li class="slide">12</li>
             </ul>
         </div>
         <div class="slide-tab-list">
-            <label class="tab" for="portfolio1">汽車</label>
-            <label class="tab" for="portfolio2">旅行</label>
-            <label class="tab" for="portfolio3">咖啡店</label>
-            <label class="tab" for="portfolio4">個人履歷</label>
+            <label class="tab" for="portfolio1">旅行</label>
+            <label class="tab" for="portfolio2">咖啡店</label>
+            <label class="tab" for="portfolio3">個人履歷</label>
+            <label class="tab" for="portfolio4">牙醫醫美</label>
             <label class="tab" for="portfolio5">婚禮企劃</label>
             <label class="tab" for="portfolio6">餐廳</label>
             <label class="tab" for="portfolio7">應用程式</label>
             <label class="tab" for="portfolio8">教育</label>
             <label class="tab" for="portfolio9">花店</label>
             <label class="tab" for="portfolio10">服飾店</label>
-            <label class="tab" for="portfolio11">牙醫醫美</label>
-            <label class="tab" for="portfolio12">電子科技</label>
+            <label class="tab" for="portfolio11">電子科技</label>
+            <label class="tab" for="portfolio12">汽車</label>
         </div>
     </section>
 
