[公司形象網站] 動畫效果 => 作品集 輪播圖 => 調整參數

--- a/AI-ShenLun/04-作品集/carousel-slide/index.html
+++ b/AI-ShenLun/04-作品集/carousel-slide/index.html
@@ -27,55 +27,55 @@
                 <input type="radio" id="portfolio11" name="control">
                 <input type="radio" id="portfolio12" name="control">
                 
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/TravelWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide1.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/CoffeeWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide2.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/PersonalPortfolio/home.html">
                         <img src="./images/portfolio-slide/portfolio-slide3.png">
                     </a>                    
                 </li>
-                <li class="slide">
-                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/FoodWebsite/index.html">
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/DentistWebsiteFrontend/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide4.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/WeddingWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide5.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/FoodWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide6.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/AppLandingWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide7.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/EdufordWebsite/index.html">
                         <img src="./images/portfolio-slide/portfolio-slide8.png">
                     </a>                    
                 </li>
-                <li class="slide">
+                <li class="portfolio-slide">
                     9
                 </li>
-                <li class="slide">10</li>
-                <li class="slide">11</li>
-                <li class="slide">12</li>
+                <li class="portfolio-slide">10</li>
+                <li class="portfolio-slide">11</li>
+                <li class="portfolio-slide">12</li>
             </ul>
         </div>
-        <div class="slide-tab-list">
+        <div class="portfolio-slide-tab-list">
             <label class="tab" for="portfolio1">旅行</label>
             <label class="tab" for="portfolio2">咖啡店</label>
             <label class="tab" for="portfolio3">個人履歷</label>
