--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -208,32 +208,87 @@
 
 
     <!-- 作品集 start -->
-    <section class="portfolio-block" id="portfolio-block">
-        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
-        <p>
-            我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
-        </p>
-        <!-- 報價流程 之 輪播圖 -->
-        <div class="slide-container">
-            <div class="slide-protfolio-list">
-                <img src="./images/background/bg-computer.png">
-            </div>
-            <div class="slide-tab-list">
-                <label class="tab">汽車</label>
-                <label class="tab">旅行</label>
-                <label class="tab">咖啡店</label>
-                <label class="tab">個人履歷</label>
-                <label class="tab">婚禮企劃</label>
-                <label class="tab">餐廳</label>
-                <label class="tab">應用程式</label>
-                <label class="tab">教育</label>
-                <label class="tab">花店</label>
-                <label class="tab">服飾店</label>
-                <label class="tab">牙醫醫美</label>
-                <label class="tab">電子科技</label>
-            </div>
+    <section class="portfolio-block" id="portfolio-block">      
+        <div class="computer-background-img">
+            <ul class="portfolio-slide-list">
+                <input type="radio" id="portfolio1" name="control" checked>
+                <input type="radio" id="portfolio2" name="control">
+                <input type="radio" id="portfolio3" name="control">
+                <input type="radio" id="portfolio4" name="control">
+                <input type="radio" id="portfolio5" name="control">
+                <input type="radio" id="portfolio6" name="control">
+                <input type="radio" id="portfolio7" name="control">
+                <input type="radio" id="portfolio8" name="control">
+                <input type="radio" id="portfolio9" name="control">
+                <input type="radio" id="portfolio10" name="control">
+                <input type="radio" id="portfolio11" name="control">
+                <input type="radio" id="portfolio12" name="control">
+                
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/TravelWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide1.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/CoffeeWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide2.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/PersonalPortfolio/home.html">
+                        <img src="./images/portfolio-slide/portfolio-slide3.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/DentistWebsiteFrontend/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide4.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/WeddingWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide5.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/FoodWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide6.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/AppLandingWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide7.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    <a target="_blank" href="https://aloo31124.github.io/2024-html-css-layout/EdufordWebsite/index.html">
+                        <img src="./images/portfolio-slide/portfolio-slide8.png">
+                    </a>                    
+                </li>
+                <li class="portfolio-slide">
+                    9
+                </li>
+                <li class="portfolio-slide">10</li>
+                <li class="portfolio-slide">11</li>
+                <li class="portfolio-slide">12</li>
+            </ul>
+        </div>
+        <div class="portfolio-slide-tab-list">
+            <label class="tab" for="portfolio1">旅行</label>
+            <label class="tab" for="portfolio2">咖啡店</label>
+            <label class="tab" for="portfolio3">個人履歷</label>
+            <label class="tab" for="portfolio4">牙醫醫美</label>
+            <label class="tab" for="portfolio5">婚禮企劃</label>
+            <label class="tab" for="portfolio6">餐廳</label>
+            <label class="tab" for="portfolio7">應用程式</label>
+            <label class="tab" for="portfolio8">教育</label>
+            <label class="tab" for="portfolio9">花店</label>
+            <label class="tab" for="portfolio10">服飾店</label>
+            <label class="tab" for="portfolio11">電子科技</label>
+            <label class="tab" for="portfolio12">汽車</label>
         </div>
     </section>
+
+
     <!-- 作品集 end -->
 
 
