[公司形象網站] 動畫效果 => 作品集 輪播圖 => 調整 h1, p

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -208,7 +208,12 @@
 
 
     <!-- 作品集 start -->
-    <section class="portfolio-block" id="portfolio-block">      
+    <section class="portfolio-block" id="portfolio-block">  
+        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
+        <p>
+            我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
+        </p>
+        <!-- 報價流程 之 輪播圖 -->    
         <div class="computer-background-img">
             <ul class="portfolio-slide-list">
                 <input type="radio" id="portfolio1" name="control" checked>
