[公司形象網站] 刻板 => [作品集] => 內凹倒三角形 => 暫時圖片

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -208,7 +208,8 @@
 
 
     <!-- 作品集 start -->
-    <section class="portfolio-block" id="portfolio-block">  
+    <section class="portfolio-block" id="portfolio-block">
+        <img class="background-round-traingle" src="./images/background/round-traingle.png">
         <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
