[公司形象網站] 刻板 => [網頁標頭] =>  上下移動游標

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -61,6 +61,7 @@
             <div class="move-from-left-padding"></div>
             <div class="slogan-big-move">設計SSL安全憑證</div>
         </div>
+        <img class="icon-double-down-arr" src="./images/icon/icon-double-down-arr.png">
     </section>
     <!-- 網頁標頭 過場動畫 end -->
 
