--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -54,7 +54,7 @@
             <div class="move-from-right-padding"></div>
         </div>
         <div class="center-title left-black animate">
-            <h1 class="left-black animate">AI Excellence</h1>
+            <h1 class="left-black animate">艾陞倫! We're Excellence!</h1>
             <p class="slogan-little left-black animate">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
         </div>
         <div class="move-from-left">
