--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -215,7 +215,7 @@
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
         </p>
-        <!-- 報價流程 之 輪播圖 -->    
+        <!-- 作品集 之 輪播圖 -->    
         <div class="computer-background-img">
             <ul class="portfolio-slide-list">
                 <input type="radio" id="portfolio1" name="control" checked>
@@ -294,8 +294,6 @@
             <label class="tab" for="portfolio12">汽車</label>
         </div>
     </section>
-
-
     <!-- 作品集 end -->
 
 
