[公司形象網站] 刻板 => 修正 bug => 標頭動畫 標題跑版, 輪播圖跑版

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -54,7 +54,7 @@
             <div class="move-from-right-padding"></div>
         </div>
         <div class="center-title left-black animate">
-            <h1 class="left-black animate">艾陞倫! We're Excellence!</h1>
+            <h1 class="left-black animate">艾陞倫 We're Excellence!</h1>
             <p class="slogan-little left-black animate">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
         </div>
         <div class="move-from-left">
@@ -202,7 +202,7 @@
         </div>
         <div class="right-block">
             <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">服務項目</h2>
-            <img class="right-logo" src="./images/logo/logo-blue-right-top.png">
+            <img class="right-logo" src="./images/background/logo-blue-right-top.png.png">
         </div>
     </section>
     <!-- 服務項目 end -->
