[公司形象網站] 動畫-樣式優化 => [輪播圖] 動畫效果優化4 => js  [拖曳] => 後續須優化

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -80,25 +80,20 @@
         <div class="price-work-flow-slide">
             <div class="flow-tab-list">
                 <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="control1" class="fas fa-search" for="control-1" style="color:#F1B41B"></label>
+                    <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
                 </div>
                 <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="control2" class="fas fa-bars" for="control-2"></label>
+                    <label id="flowTab2" class="fas fa-bars"></label>
                 </div>
                 <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="control3" class="fas fa-shopping-cart" for="control-3"></label>
+                    <label id="flowTab3" class="fas fa-shopping-cart"></label>
                 </div>
                 <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="control4" class="fas fa-eye" for="control-4"></label>
+                    <label id="flowTab4" class="fas fa-eye"></label>
                 </div>
             </div>
                 
             <ul class="flow-slide-list">
-                    <input type="radio" id="control-1" name="control" checked>
-                    <input type="radio" id="control-2" name="control">
-                    <input type="radio" id="control-3" name="control">
-                    <input type="radio" id="control-4" name="control">
-
                     <li class="slide" id="slide1">
                         <h3>01 需求溝通</h3>
                         <p>
@@ -144,11 +139,11 @@
                         </p>
                     </li>
 
-                    <div class="controls-visible">
-                        <label for="control-1"></label>
-                        <label for="control-2"></label>
-                        <label for="control-3"></label>
-                        <label for="control-4"></label>
+                    <div class="flow-button-icon-list">
+                        <label id="flowIcon1"></label>
+                        <label id="flowIcon2"></label>
+                        <label id="flowIcon3"></label>
+                        <label id="flowIcon4"></label>
                     </div>
 
             </ul>
