形象網站 github page + 輪播圖

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -95,47 +95,35 @@
                 
             <ul class="flow-slide-list">
                     <li class="slide" id="slide1">
-                        <h3>01 需求溝通</h3>
-                        <p>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
+                        <h3>01 需求分析</h3>
+                        <p> 
+                            1. 會請專業的顧問, 不只理解你的需求, 更是裡解你的痛點。
                             <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
+                            2. 為解決您的痛點, 會擬出初步專案管理規劃與簡易UI畫面來幫助團隊的討論。
                         </p>
                     </li>
                     <li class="slide" id="slide2">
-                        <h3>02 需求溝通</h3>
+                        <h3>02 開發回饋</h3>
                         <p>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
+                            1. 簽約後, 技術團隊便會立刻開發, 並在開發的各個階段與您確認, 保持期望一致。
                             <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
+                            2. 團隊致力於敏捷開發, 若客戶有其他期待, 可在一定範圍內調整。
                         </p>
                     </li>
                     <li class="slide" id="slide3">
-                        <h3>03 需求溝通</h3>
+                        <h3>03 驗收優化</h3>
                         <p>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
+                            1. 協助將網站上架, 網域等相關設定建置。
                             <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
+                            2. 可是情況教育訓練, 讓客戶更理解操作。
                         </p>
                     </li>
                     <li class="slide" id="slide4">
-                        <h3>04 需求溝通</h3>
+                        <h3>04 維護持續優化</h3>
                         <p>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
+                            1. 上架後若有任何疑問, 都能協助您維護與強化。
                             <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
-                            需求溝通需求溝通需求溝通需求溝通需求溝通
-                            <br>
+                            2. 每年定期都可有進一步的客製優惠訪談, 如: 介面美化, 功能升級等......。
                         </p>
                     </li>
 
