[公司形象網站] 導覽列優化 => 手機滑動卡頓 + RWD調整 + 滾動 gsap bug

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -20,22 +20,22 @@
                     <img src="images/logo/logo-shadow.png">
                 </a>
                 <div class="item-list">
-                    <div class="item" id="nav-item1">
+                    <a class="item" id="nav-item1" href="#price-work-flow">
                         <img src="./images/icon/icon-shank-hand.png">
-                        <a href="#price-work-flow">合作交流</a>
-                    </div>
-                    <div class="item" id="nav-item2">
+                        <label>合作流程</label>
+                    </a>
+                    <a class="item" id="nav-item2" href="#service-list">
                         <img src="./images/icon/icon-services.png">
-                        <a href="#service-list">服務項目</a>
-                    </div>
-                    <div class="item" id="nav-item3">
+                        <label>服務項目</label>
+                    </a>
+                    <a class="item" id="nav-item3" href="#portfolio-block">
                         <img src="./images/icon/icon-works.png">
-                        <a href="#portfolio-block">作品集</a>
-                    </div>
-                    <div class="item" id="nav-item4">
+                        <label>作品集</label>
+                    </a>
+                    <a class="item" id="nav-item4" href="#footer">
                         <img src="./images/icon/icon-phone.png">
-                        <a href="#footer">聯絡我們</a>
-                    </div>
+                        <label>聯絡我們</label>
+                    </a>
                 </div>
             </div>
             <!-- 藍色彈性底線 -->
