[公司形象網站] 討論, 下周一 能給客戶 + 測試修改

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -29,8 +29,10 @@
                         <label>服務項目</label>
                     </a>
                     <a class="item" id="nav-item3" href="#portfolio-block">
+                        &nbsp;
                         <img src="./images/icon/icon-works.png">
                         <label>作品集</label>
+                        &nbsp;
                     </a>
                     <a class="item" id="nav-item4" href="#footer">
                         <img src="./images/icon/icon-phone.png">
