[公司形象網站] 第三方 => 文字變色 + debug

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -72,7 +72,7 @@
     <section class="price-work-flow" id="price-work-flow">
         <img src="./images/background/bg-left-little-star.png" class="left-little-img">
         <img src="./images/background/bg-right-star.png" class="right-img">
-        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">合作流程</h2>
+        <h2 class="price-work-flow-title" data-bg-color="#C3C3C3" data-fg-color="#00407E">合作流程</h2>
         <p>
             在尋找一個優流設計服務前，不妨先了解我們的服務流程。我們可將流程由繁化簡。
             <br>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <div class="right-block">
-            <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">服務項目</h2>
+            <h2 class="service-list-title" data-bg-color="#C3C3C3" data-fg-color="#00407E">服務項目</h2>
             <img class="right-logo" src="./images/background/logo-blue-right-top.png.svg">
         </div>
     </section>
@@ -194,7 +194,7 @@
     <!-- 作品集 start -->
     <section class="portfolio-block" id="portfolio-block">
         <img class="background-round-traingle" src="./images/background/round-traingle.svg">
-        <h2 class="text-color-transition" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
+        <h2 class="portfolio-block-title" data-bg-color="#C3C3C3" data-fg-color="#00407E">作品集</h2>
         <p>
             我們對各產業的網頁設計都有不同的見解，能滿足不同客戶的需求。
         </p>
