[公司形象網站] [合作流程] 輪播圖 優化 + 加入箭頭 + 彈跳底線 + padding

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -80,18 +80,27 @@
         </p>
         <!-- 合作流程 之 輪播圖 -->
         <div class="price-work-flow-slide">
-            <div class="flow-tab-list">
-                <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
+            <div class="flow-tab-list-container">
+                <div class="flow-tab-list">
+                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
+                        <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
+                    </div>
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
+                        <label id="flowTab2" class="fas fa-file-code"></label>
+                    </div>
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
+                        <label id="flowTab3" class="fas fa-check-square"></label>
+                    </div>
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
+                        <label id="flowTab4" class="fas fa-upload"></label>
+                    </div>
                 </div>
-                <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="flowTab2" class="fas fa-bars"></label>
-                </div>
-                <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="flowTab3" class="fas fa-shopping-cart"></label>
-                </div>
-                <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                    <label id="flowTab4" class="fas fa-eye"></label>
+                <!-- 藍色彈性底線 -->
+                <div class="price-work-flow-bounce-bottom-box">
+                    <div class="price-work-flow-bounce-bottom"></div>
                 </div>
             </div>
                 
