--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -108,9 +108,9 @@
                     <li class="slide" id="slide1">
                         <h3>01 需求分析</h3>
                         <p> 
-                            1. 會請專業的顧問, 不只理解你的需求, 更是裡解你的痛點。
+                            1. 會請專業的顧問, 不只了解你的需求, 更是裡解你的痛點。
                             <br>
-                            2. 為解決您的痛點, 會擬出初步專案管理規劃與簡易UI畫面來幫助團隊的討論。
+                            2. 擬出初步專案管理規劃與簡易UI畫面來幫助團隊的討論。
                         </p>
                     </li>
                     <li class="slide" id="slide2">
