[公司形象網站] 網頁標頭 title動畫 => 垂直滾動

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -51,17 +51,21 @@
     
     <!-- 網頁標頭 過場動畫 start -->
     <section class="header-animation">
-        <div class="move-from-right">
-            <div class="slogan-big-move">教育旅行咖啡花店</div>
-            <div class="move-from-right-padding"></div>
-        </div>
-        <div class="center-title left-black animate">
-            <h1 class="left-black animate">艾陞倫 We're Excellence!</h1>
-            <p class="slogan-little left-black animate">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
-        </div>
-        <div class="move-from-left">
-            <div class="move-from-left-padding"></div>
-            <div class="slogan-big-move">設計SSL安全憑證</div>
+        <img class="head-right-little-img" src="./images/background/bg-left-little-star.png">
+        <img class="head-left-img" src="./images/background/bg-right-star.png" >
+        <img class="head-right-img" src="./images/background/bg-left-big-block.png">
+
+        <div class="header-animation-text-content">
+            <div class="move-slogn-container">
+                <div class="move-slogn-right">教育旅行咖啡花店</div>
+            </div>
+            <div class="center-title left-black animate">
+                <h1 class="left-black animate">艾陞倫 We're Excellence!</h1>
+                <p class="slogan-little left-black animate">我們熱愛學習溝通, 您值得信賴的合作夥版</p>
+            </div>
+            <div class="move-slogn-container">
+                <div class="move-slogn-left">設計SSL安全憑證</div>
+            </div>            
         </div>
         <img class="icon-double-down-arr" src="./images/icon/icon-double-down-arr.png">
     </section>
@@ -144,11 +148,8 @@
                         <label id="flowIcon3"></label>
                         <label id="flowIcon4"></label>
                     </div>
-
             </ul>
-
         </div>
-        
     </section>
     <!-- 合作流程 end -->
 
