feat [公司形象網站] => 網頁標頭 h1 黃色水平位移

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Excellence</title>
+    <title>Web Design Excellent</title>
+
+    <link rel="icon" type="image/svg+xml" href="./images/logo/logo-shadow.png" />
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -89,21 +91,13 @@
         <div class="price-work-flow-slide">
             <div class="flow-tab-list-container">
                 <div class="flow-tab-list">
-                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
-                    </div>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label id="flowTab2" class="fas fa-file-code"></label>
-                    </div>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label id="flowTab3" class="fas fa-check-square"></label>
-                    </div>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <div class="text-bounce-button-blue-container text-bounce-button-blue">
-                        <label id="flowTab4" class="fas fa-upload"></label>
-                    </div>
+                    <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
+                    <div class="fa fa-arrow-right" aria-hidden="true"></div>
+                    <label id="flowTab2" class="fas fa-file-code"></label>
+                    <div class="fa fa-arrow-right" aria-hidden="true"></div>
+                    <label id="flowTab3" class="fas fa-check-square"></label>
+                    <div class="fa fa-arrow-right" aria-hidden="true"></div>
+                    <label id="flowTab4" class="fas fa-upload"></label>
                 </div>
                 <!-- 藍色彈性底線 -->
                 <div class="price-work-flow-bounce-bottom-box">
