feat  作品集 [文案]  [超跑 App] =>  優化 文案 + 內容

--- a/AI-Excellence-sample/index.html
+++ b/AI-Excellence-sample/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Design Excellent</title>
+    <title>艾陞倫 Web Design Excellent</title>
 
     <link rel="icon" type="image/svg+xml" href="./images/logo/logo-shadow.png" />
 
@@ -295,7 +295,7 @@
             <div class="item">
                 <i class="">©</i>
                 <p>
-                    2024 Copyright 艾陞倫有限公司
+                    2024 Copyright 艾陞倫有限公司
                 </p>
             </div>
             <div class="item">
