--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>艾陞倫 Web Design Excellent</title>
 
-    <link rel="icon" type="image/svg+xml" href="./images/logo/logo-shadow.png" />
+    <link rel="icon" type="image/svg+xml" href="./images/logo/logo-shadow.svg" />
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
