[公司形象網站] => 整理 js 程式 => 報價流程 onclick js 簡化寫法

--- a/01-Excellence-Web/index.html
+++ b/01-Excellence-Web/index.html
@@ -91,13 +91,13 @@
         <div class="price-work-flow-slide">
             <div class="flow-tab-list-container">
                 <div class="flow-tab-list">
-                    <label id="flowTab1" class="fas fa-search" style="color:#F1B41B"></label>
+                    <label id="flowTab1" onclick="moveFlowSlide(1)" class="fas fa-search" style="color:#F1B41B"></label>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab2" class="fas fa-file-code"></label>
+                    <label id="flowTab2" onclick="moveFlowSlide(2)" class="fas fa-file-code"></label>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab3" class="fas fa-check-square"></label>
+                    <label id="flowTab3" onclick="moveFlowSlide(3)" class="fas fa-check-square"></label>
                     <div class="fa fa-arrow-right" aria-hidden="true"></div>
-                    <label id="flowTab4" class="fas fa-upload"></label>
+                    <label id="flowTab4" onclick="moveFlowSlide(4)" class="fas fa-upload"></label>
                 </div>
                 <!-- 藍色彈性底線 -->
                 <div class="price-work-flow-bounce-bottom-box">
@@ -140,10 +140,10 @@
                     </li>
 
                     <div class="flow-button-icon-list">
-                        <label id="flowIcon1"></label>
-                        <label id="flowIcon2"></label>
-                        <label id="flowIcon3"></label>
-                        <label id="flowIcon4"></label>
+                        <label id="flowIcon1" onclick="moveFlowSlide(1)"></label>
+                        <label id="flowIcon2" onclick="moveFlowSlide(2)"></label>
+                        <label id="flowIcon3" onclick="moveFlowSlide(3)"></label>
+                        <label id="flowIcon4" onclick="moveFlowSlide(4)"></label>
                     </div>
             </ul>
         </div>
